# doebus-django

./: .gitignore  README.md
{{cookiecutter.project_slug}}/: .flake8  .gitignore  Makefile  docker-compose.yml  pyproject.toml
{{cookiecutter.project_slug}}/src/: conftest.py  mypy.ini  pytest.ini
{{cookiecutter.project_slug}}/src/.app-template/: admin.py-tpl  models.py-tpl  services.py-tpl  tasks.py-tpl  urls.py-tpl
{{cookiecutter.project_slug}}/src/.app-template/api/: serializers.py-tpl  viewsets.py-tpl
{{cookiecutter.project_slug}}/src/.app-template/tests/: factory.py-tpl  fixtures.py-tpl
{{cookiecutter.project_slug}}/src/a12n/api/: throttling.py
{{cookiecutter.project_slug}}/src/app/: .env  .env.ci  celery.py  models.py  settings.py
{{cookiecutter.project_slug}}/src/app/base/: admin.py  factory.py  models.py  services.py
{{cookiecutter.project_slug}}/src/app/conf/: api.py  apps.py  celery.py  db.py
{{cookiecutter.project_slug}}/src/app/services/: __init__.py
{{cookiecutter.project_slug}}/src/app/testing/: factory.py
{{cookiecutter.project_slug}}/src/app/tests/: test_remote_addr_midlleware.py
{{cookiecutter.project_slug}}/src/app/urls/: v1.py
{{cookiecutter.project_slug}}/src/examples/: __init__.py  apps.py
{{cookiecutter.project_slug}}/src/examples/migrations/: 0001_initial.py
{{cookiecutter.project_slug}}/src/examples/models/: __init__.py  person.py  pet.py
{{cookiecutter.project_slug}}/src/examples/services/: __init__.py
{{cookiecutter.project_slug}}/src/examples/tests/: conftest.py
{{cookiecutter.project_slug}}/src/orders/: admin.py  apps.py  models.py  services.py  urls.py
{{cookiecutter.project_slug}}/src/orders/api/: serializers.py  viewsets.py
{{cookiecutter.project_slug}}/src/products/: admin.py  apps.py  models.py  urls.py
{{cookiecutter.project_slug}}/src/reports/: admin.py  models.py  tasks.py  urls.py
{{cookiecutter.project_slug}}/src/users/: factory.py
(+67 files in other folders)
